events workflow - UX/UI - preparing dockerization - fix CSRF error - dashboard table's filter and group by feature - createUser feature for admins & superadmins
